Fixed menu spacing

--- a/css/style.scss
+++ b/css/style.scss
@@ -618,7 +618,7 @@ body.bd-home {
 			width: 100%;
 			overflow: auto;
 			-webkit-overflow-scrolling: touch;
-			padding: 36px 0;
+			padding: 26px 0;
 			@media screen and (min-width:521px) {
 			  padding: 0;
 				overflow: visible;
